--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+		<postgresql.version>42.3.1</postgresql.version>
+		<hibernate.version>5.6.3.Final</hibernate.version>
+		<spring-web.version>5.3.14</spring-web.version>
+		<spring-boot.version>2.6.2</spring-boot.version>
+		<log4j-core.version>2.17.0</log4j-core.version>
 	</properties>
 
 	<parent>
@@ -49,23 +54,17 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.4.12.Final</version>
+			<version>${hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>RELEASE</version>
-			<scope>test</scope>
+			<version>${postgresql.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>5.2.5.RELEASE</version>
+			<version>${spring-web.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -78,17 +77,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>2.2.6.RELEASE</version>
+			<version>${spring-boot.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.15.0</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.12</version>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j-core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
